k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subfrost-io
  namespace: subfrost
  annotations:
    # Bind the GKE health check to /api/health (see BackendConfig below).
    cloud.google.com/backend-config: '{"default":"subfrost-io"}'
spec:
  type: ClusterIP
  selector:
    app: subfrost-io
  ports:
    - name: http
      port: 80
      targetPort: 3000
